# db-exp

./: Cargo.toml  LICENSE  rustfmt.toml
src/: db.rs  main.rs
src/handlers/: dashboard.rs  mod.rs
static/: bootsrap.css  bootsrap.css.map  bootstrap.css
templates/: base.html  dashboard.html  index.html  nav.html
